--- a/remote_Job/template/account/password_reset_confirm.html
+++ b/remote_Job/template/account/password_reset_confirm.html
@@ -21,8 +21,9 @@
             <div class="col-md-6">
                 <h2 class="mb-4">Reset Your Password</h2>
                 {% if validlink %}
-                    <p>Please enter your new password twice:</p>
+                    <p>Please enter your new password twice</p>
                     <form action="." method="post">
+                        {% include 'messages.html' %}
                         {% csrf_token %}
                         <div class="form-group">
                             {{ form.new_password1.label_tag }}
@@ -30,25 +31,24 @@
                                 {{ form.new_password1 }}
                                 <div class="input-group-append">
                                     <button type="button" class="btn btn-outline-eye" onclick="togglePassword('id_{{ field.name }}')">
-                                        <span class="fa-solid fa-eye fa-lg" id="eyeIcon" style="color: #000000;"></span>
+                                        <span class="fa-solid fa-eye " id="eyeIcon" style="color: #6a6161;"></span>
                                     </button>
                                 </div>
                             </div>
-                            <p style="color: red;">{{ form.new_password1.errors }}</p>
+                            
                         
                             {{ form.new_password2.label_tag }}
                             <div class="input-group">
                                 {{ form.new_password2 }}
                                 <div class="input-group-append">
                                     <button type="button" class="btn btn-outline-eye" onclick="togglePassword('id_{{ field.name }}')">
-                                      <i class="fa-solid fa-eye fa-lg" id="eyeIcon" style="color: #000000;"></i> 
+                                      <i class="fa-solid fa-eye " id="eyeIcon" style="color: #6a6161;"></i> 
                                     </button> 
                                   </div>
                             </div>
-                            <p style="color: red;">{{ form.new_password2.errors }}</p> 
+                          
                         </div>
                         
-                    
                         <p><input type="submit" class="btn btn-primary mb-3" value="Change password" /></p>
                     </form>
                     
