--- a/remote_Job/template/jobapp/about_us.html
+++ b/remote_Job/template/jobapp/about_us.html
@@ -29,12 +29,11 @@
             </a>
           </div>
           <div class="col-lg-5 ml-auto">
-            <h2 class="section-title mb-3">Job Finder for Your Careers</h2>
-            <p class="lead">Eveniet voluptatibus voluptates suscipit minima, cum voluptatum ut dolor, sed facere corporis
-              qui, ea quisquam quis odit minus nulla vitae. Sit, voluptatem.</p>
-            <p>Ipsum harum assumenda in eum vel eveniet numquam, cumque vero vitae enim cupiditate deserunt eligendi officia
-              modi consectetur. Expedita tempora quos nobis earum hic ex asperiores quisquam optio nostrum sit!</p>
-          </div>
+            <h2 class="section-title mb-3">Unlock Your Career Potential</h2>
+            <p align="justify" class="lead">Experience a revolutionary approach to job searching. Discover opportunities that align with your goals and ambitions, and take the next step towards a fulfilling career.</p>
+            <p align="justify">At Job Finder, we believe in empowering your career journey. Navigate through a sea of possibilities, where every click brings you closer to your dream job. Seize the chance to redefine your professional narrative!</p>
+        </div>
+        
         </div>
       </div>
     </section>
@@ -44,20 +43,19 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center" data-aos="fade">
-            <h2 class="section-title mb-3">Our Team</h2>
+            <h2 class="section-title ">Our Team</h2>
           </div>
         </div>
 
-        <div class="row align-items-center block__69944">
+        <div align="center"class="row align-items-center">
 
-          <div class="col-md-6">
+          <div class="col-md-6 order-md-2">
             <img src="{% static 'images/bhanu.jpg' %}" alt="Image" class="img-fluid mb-4 rounded" width="500" height="650">
 
             <h3>Bhanu Aryal</h3>
             <p class="text-muted">Product Owner</p>
-            <p>Soluta quasi cum delectus eum facilis recusandae nesciunt molestias accusantium libero dolores repellat id in
-              dolorem laborum ad modi qui at quas dolorum voluptatem voluptatum repudiandae voluptatibus ut? Ex vel ad
-              explicabo iure ipsa possimus consectetur neque rem molestiae eligendi velit?.</p>
+            <p align="justify">Bhanu is our dedicated Product Owner with a relentless passion for innovation. Leading our team with a commitment to excellence, Bhanu crafts solutions that elevate your experience. Let's shape the future together! (Remote Job Finder)</p>
+
             <div class="social mt-4">
               <a href="https://www.facebook.com/profile.php?id=100075600817337"><span class="icon-facebook"></span></a>
               <a href="https://www.instagram.com/iambhanuaryal/"><span class="icon-instagram"></span></a>
@@ -73,9 +71,8 @@
 
             <h3>Biwas Pudasaini</h3>
             <p class="text-muted">CEO</p>
-            <p>Soluta quasi cum delectus eum facilis recusandae nesciunt molestias accusantium libero dolores repellat id in
-              dolorem laborum ad modi qui at quas dolorum voluptatem voluptatum repudiandae voluptatibus ut? Ex vel ad
-              explicabo iure ipsa possimus consectetur neque rem molestiae eligendi velit?.</p>
+            <p align="justify">Biwas is our dynamic CEO, steering the ship with creativity and determination. With a vision for innovation, Biwas drives our team to new heights, making strides in the world of technology. Join us on this exciting journey with Biwas!</p>
+
             <div class="social mt-4">
               <a href="https://www.facebook.com/unique.biwas.7/"><span class="icon-facebook"></span></a>
               <a href="https://www.instagram.com/unique_biwas/"><span class="icon-instagram"></span></a>
@@ -95,8 +92,8 @@
         <div class="row mb-5 justify-content-center">
           <div class="col-md-7 text-center">
             <h2 class="section-title mb-2 text-white">JobBoard Site Stats</h2>
-            <p class="lead text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita unde officiis
-              recusandae sequi excepturi corrupti.</p>
+            <p class="lead text-white">Join a thriving community where opportunities and talent converge. Explore the impact we've made together!</p>
+
           </div>
         </div>
         <div class="row pb-0 block__19738 section-counter">
