--- a/remote_Job/template/jobapp/job-single.html
+++ b/remote_Job/template/jobapp/job-single.html
@@ -99,7 +99,7 @@
               <form id="applyForm" action="{% url 'jobapp:apply-job' job.id %}" method="POST">
                 {% csrf_token %}
                 <input type="hidden" name="job" value="{{ job.id }}">
-
+                
                 <input type="submit" class="btn btn-block btn-primary btn-md" value="Apply Now" />
               </form>
               {% endif %}
@@ -124,74 +124,7 @@
           {{ job.description | safe }}
         </div>
 
-        <div class="row mb-5">
-          <div class="col-6">
-
-            {% if user.is_authenticated and user.role == 'employee' %}
-            {% is_job_already_saved job request.user as is_saved %}
-            {% if is_saved %}
-            <!-- <span class="btn btn-block btn-light btn-md"><span class="icon-heart-o mr-2 text-danger"></span>Already
-              Saved
-              Job</span> -->
-            {% else %}
-
-            <form id="saveForm" action="{% url 'jobapp:bookmark-job' job.id %}" method="POST">
-              {% csrf_token %}
-              <input type="hidden" name="job" value="{{ job.id }}">
-              <!-- <input type="submit" class="btn btn-block btn-light btn-md" value="Save" /> -->
-
-            </form>
-
-            {% endif %}
-
-            {% elif request.user.id == job.user.id and user.role == 'employer' %}
-            <button onclick="call_sw_alert_func('{% url 'jobapp:delete' job.id %}','{{ job.id }}','Once Deleted, You Will Not be Able To Recover This Post!')" class="btn btn-block btn-danger btn-md">Delete</button>
-                                   
-           {% elif user.role == none %}
-
-            <form id="saveForm" action="{% url 'jobapp:bookmark-job' job.id %}" method="POST">
-              {% csrf_token %}
-              <input type="hidden" name="job" value="{{ job.id }}">
-
-              <!-- <input type="submit" class="btn btn-block btn-light btn-md" value="Save" /> -->
-            </form>
-
-            {% endif %}
-          </div>
-          {% if user.is_authenticated and  user.role == 'employee' %}
-          {% is_job_already_applied job request.user as is_applied %}
-          {% if is_applied %}
-
-          <div class="col-6">
-            <!-- <span class="btn btn-block btn-danger btn-md">Already Applied</span> -->
-          </div>
-          {% else %}
-          <div class="col-6">
-            <form id="applyForm" action="{% url 'jobapp:apply-job' job.id %}" method="POST">
-              {% csrf_token %}
-              <input type="hidden" name="job" value="{{ job.id }}">
-
-              <!-- <input type="submit" class="btn btn-block btn-primary btn-md" value="Apply Now" /> -->
-            </form>
-          </div>
-          {% endif %}
-
-          {% elif  request.user.id == job.user.id and  user.role == 'employer' %}
-          <div class="col-6">
-
-            <a href="{% url 'jobapp:edit-job' job.id %}" class="btn btn-block btn-light btn-md">Edit</a>
-          </div>
-          {% elif user.role == none %}
-            <div class="col-6">
-              <form id="applyForm" action="{% url 'jobapp:apply-job' job.id %}" method="POST">
-                {% csrf_token %}
-                <input type="hidden" name="job" value="{{ job.id }}">
-
-                <!-- <input type="submit" class="btn btn-block btn-primary btn-md" value="Apply Now" /> -->
-              </form>
-          </div> 
-          {% endif %}
-        </div>
+        
 
       </div>
       <div class="col-lg-4">
@@ -221,7 +154,7 @@
             <a href="https://www.facebook.com/unique.biwas.7/" class="pt-3 pb-3 pr-3 pl-0"><span class="icon-facebook"></span></a>
             <a href="https://twitter.com/BiwasUnique" class="pt-3 pb-3 pr-3 pl-0"><span class="icon-twitter"></span></a>
             <a href="https://www.linkedin.com/in/biwas-pudasaini-191435216/" class="pt-3 pb-3 pr-3 pl-0"><span class="icon-linkedin"></span></a>
-            <a href="https://www.instagram.com/unique_biwas/"" class="pt-3 pb-3 pr-3 pl-0"><span class="icon-instagram"></span></a>
+            <a href="https://www.instagram.com/unique_biwas/" class="pt-3 pb-3 pr-3 pl-0"><span class="icon-instagram"></span></a>
           </div>
         </div>
 
