--- a/remote_Job/template/jobapp/post-job.html
+++ b/remote_Job/template/jobapp/post-job.html
@@ -17,126 +17,89 @@
         </div>
       </div>
     </section>
-
-    
+  
+  
     <section class="site-section">
       <div class="container">
+        <div class="row">
+          <div class="col-lg-10 mb-5 mx-auto">
+            {% include 'messages.html' %}
+            <form method="POST" action="" enctype="multipart/form-data" class="p-4 rounded-lg" id="login-form" style="background-color: #ffffff; position: relative;">
 
-        <div class="row align-items-center mb-5">
-          <div class="col-lg-8">
-            <div class="d-flex align-items-center">
-              <div>
-                <h2>Post A Job</h2>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="row">
-       
-              <div class="col-6">
-                <a href="{% url 'jobapp:dashboard' %}" class="btn btn-block btn-primary btn-md">View All My Jobs</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <form method="POST" enctype="multipart/form-data" class="p-4 rounded-lg" style="background-color: #ffffff; position: relative;">
-          <!-- <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
-          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div> -->
-
-        <div class="row mb-5 p-4 p-md-5 border rounded" style="background-color: #ffffff; position: relative;">
-          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
-          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div>
-          <div class="col-lg-12" style="background-color: #ffffff; position: relative;">
-            <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
-            <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div>
-              <h3 class="text-black mb-5 border-bottom pb-2">Job Details</h3>
-                  {% if form.errors %}
-                        {% for field in form %}
-                            {% for error in field.errors %}
-                                <div class="alert alert-danger alert-dismissable">
-                                    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                                    <strong>{{ field.label }}: {{ error|escape }}</strong>
-                                </div>
-                            {% endfor %}
-                        {% endfor %}
-                    {% endif %}
-            {% csrf_token %}
+              <div class="col-lg-12" style="background-color: #ffffff; position: relative;">
+                <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
+                <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div>
+                <h2 class="mb-4 text-center">Post A Job</h2>
+            
+                <div class="row justify-content-end">
+                  <div class="col-lg-2 col-6 col-md-12">
+                    <a href="{% url 'jobapp:dashboard' %}" class="btn btn-block btn-primary btn-md">All Jobs</a>
+                  </div>
+                </div>
+            
+                {% csrf_token %}
+            
                 {% for field in form %}
-                    {% if field.name == 'job_type'  %}
-                        <div class="form-group">
-                        <label for="job-type">Job Type</label>
-                        <select name="job_type" class="selectpicker border rounded" id="job-type" data-style="btn-black" data-width="100%" data-live-search="true" title="Select Job Type">
-                              <option value="1">Full time</option>
-                              <option value="2">Part time</option>
-                              <option value="3" {% if form.type.value == "3" %} selected {% endif %}>Internship</option>
-                        </select>
-                        </div>
-                    
-                    {% elif field.name == 'category' %}
-                        <div class="form-group">
-                        <label for="job-type">Category</label>
-                        <select name="category" class="selectpicker border rounded" id="job-type" data-style="btn-black" data-width="100%" data-live-search="true" title="Select Job Type">
-                              
-                              {% for category in categories %}
-                              
-                                    <option value="{{ category.id }}">{{ category.name }}</option>
-
-                              {% endfor %}
-                        </select>
-                        </div>
-                                           
-                        {% elif field.name == 'description' %}
-                              <div class="form-group">
-                                <label for="job-type">Description</label>
-                                 <div class="">
-                                  {{ form.media }}
-                                  {{ form.description }}
-                              </div>
-                              </div>
-                        {% elif field.name == 'last_date' %}
-                        <div class="form-group">
-                          <label class="text-black" for="id_{{ field.name }}">{{ field.label }}</label>
-                          <input type="text" class="form-control appointment_date" placeholder="Select Date"
-											    name="{{ field.name }}" id='id="id_{{ field.name }}"' required="true">
-  
-                      </div>
-                        {% elif field.name == 'company_description' %}
-                              <div class="form-group">
-                                <label for="job-type">Company Description</label>
-                              <div class="">
-                                
-                                  {{ form.media }}
-                                  {{ form.company_description }}
-                              </div>
-                              </div>
-                        {% else %}
-                          {% if field.name == 'company_name'%}
-                              <h3 class="text-black mt-5 mb-5 border-bottom pb-2">Company Details</h3>
-                          {% endif%}
-                        <div class="form-group">
-                            <label class="text-black" for="id_{{ field.name }}">{{ field.label }}</label>
-                            <input type="{{ field.field.widget.input_type }}"
-                                   class="form-control"
-                                   name="{{ field.name }}"
-                                   id="id_{{ field.name }}"
-                                   placeholder="{{ field.field.widget.attrs.placeholder }}">
-                        </div>
+                  <div class="form-group">
+                    {% if field.name == 'company_name' %}
+                      {# Move the 'Company Name' label to after the 'Company Details' section #}
+                      <h3 class="text-black mt-5 mb-3 border-bottom pb-2">Company Details</h3>
+                      <label class="text-black" for="id_{{ field.name }}">
+                        {{ field.label }}
+                        {% if field.field.required %}<span class="text-danger">*</span>{% endif %}
+                      </label>
+                    {% else %}
+                      <label class="text-black" for="id_{{ field.name }}">
+                        {{ field.label }}
+                        {% if field.field.required %}<span class="text-danger">*</span>{% endif %}
+                      </label>
                     {% endif %}
+            
+                    {% if field.name == 'job_type' %}
+                      <select name="job_type" class="selectpicker border rounded" id="job-type" data-style="btn-black" data-width="100%" data-live-search="true" title="Select Job Type">
+                        <option value="1">Full time</option>
+                        <option value="2">Part time</option>
+                        <option value="3" {% if form.type.value == "3" %} selected {% endif %}>Internship</option>
+                      </select>
+                    {% elif field.name == 'category' %}
+                      <select name="category" class="selectpicker border rounded" id="job-type" data-style="btn-black" data-width="100%" data-live-search="true" title="Select Job Type">
+                        {% for category in categories %}
+                          <option value="{{ category.id }}">{{ category.name }}</option>
+                        {% endfor %}
+                      </select>
+                    {% elif field.name == 'description' %}
+                      <div class="mb-3">
+                        {{ form.media }}
+                        {{ form.description }}
+                      </div>
+                    {% elif field.name == 'last_date' %}
+                      <input type="text" class="form-control appointment_date" placeholder="Select Date" name="{{ field.name }}" id="id_{{ field.name }}" required="true">
+                    {% elif field.name == 'company_description' %}
+                      <div class="mb-3">
+                        {{ form.media }}
+                        {{ form.company_description }}
+                      </div>
+                    {% else %}
+                      <input type="{{ field.field.widget.input_type }}" class="form-control" name="{{ field.name }}" id="id_{{ field.name }}" placeholder="{{ field.field.widget.attrs.placeholder }}">
+                    {% endif %}
+                  </div>
                 {% endfor %}
-          </div>    
-        </div>
-        
-        <div class="row align-items-center mb-5">
-          <div class="col-lg-4 ml-auto">
-            <div class="row">
-              <div class="col-6">
-
-                <input class="btn btn-block btn-primary btn-md" type="submit" value="Submit" >
+            
+                <div class="row justify-content-end">
+                  <div class="col-lg-2 col-6 col-md-12">
+                    <input class="btn btn-block btn-primary btn-md" type="submit" value="Submit">
+                  </div>
+                </div>
               </div>
-            </div>
+            </form>
+        
+    
+                    
+
+              
           </div>
         </div>
-      </form>
+                    
       </div>
     </section>
 {% endblock %}
