--- a/remote_Job/template/account/change_password.html
+++ b/remote_Job/template/account/change_password.html
@@ -2,58 +2,103 @@
 {% load static %}
 
 {% block content %}
-    <style>
-        .has-error {
-            color: #a94442;
-        }
+<!-- <style>
+    .has-error {
+        color: #a94442;
+    }
 
-        .text-danger {
-            color: #a94442;
-        }
+    .text-danger {
+        color: #a94442;
+    }
 
-        input[type="text"],
-        input[type="email"],
-        input[type="password"] {
-            width: 100%; 
-        
-        }
-    </style>
+    input[type="text"],
+    input[type="email"],
+    input[type="password"] {
+        width: 100%;
 
-    <section class="home-section section-hero inner-page overlay bg-image"
-             style="background-image: url('{% static 'images/bgrr.jpg' %}');" id="home-section">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-md-12">
-                    <div class="mb-5 text-center">
-                        <h1 class="text-white font-weight-bold">Change Password</h1>
-                        <p>Find your dream jobs on our powerful career website.</p>
-                    </div>
+    }
+</style> -->
+
+<section class="home-section section-hero inner-page overlay bg-image"
+    style="background-image: url('{% static 'images/bgrr.jpg' %}');" id="home-section">
+    <div class="container">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-md-12">
+                <div class="mb-5 text-center">
+                    <h1 class="text-white font-weight-bold">Change Password</h1>
+                    <p>Find your dream jobs on our powerful career website.</p>
                 </div>
             </div>
         </div>
-    </section>
-
+    </div>
+</section>
+<section class="site-section">
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <h2 class="mb-4">Change Password</h2>
-                <form method="post">
-                    {% csrf_token %}
-                    {% for field in form %}
-                        <div class="form-group {% if field.errors %}has-error{% endif %}">
-                            <label class="text-black" for="{{ field.id_for_label }}">{{ field.label }}</label>
-                            <div class="input-group">
-                                {{ field }}
-                            </div>
-                            {% if field.errors %}
-                                <p class="text-danger">{{ field.errors }}</p>
-                            {% endif %}
+      <div class="row">
+        <div class="col-lg-10 mb-5 mx-auto" >
+             
+                {% include 'messages.html' %}
+                <form method="POST" action="#" class="p-4 rounded-lg " id="login-form"
+                    style="background-color: #ffffff; position: relative;">
+                    <div class="col-lg-12" style="background-color: #ffffff; position: relative;">
+                        <div
+                            style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;">
                         </div>
-                    {% endfor %}
-                    <button type="submit" class="btn btn-primary mb-3">Change Password</button>
-                </form>
+                        <div
+                            style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;">
+                        </div>
+                        <h2 class="mb-4 text-center">Change Password</h2>
+                        {% csrf_token %}
+                        {% for field in form %}
+                        <div class="row form-group">
+                            <div class="col-md-12 mb-3 mb-md-0">
+                                <label class="text-black" for="id_{{ field.name }}">
+                                    {{ field.label }}
+                                    {% if field.field.required %}<span class="text-danger">*</span>{% endif %}
+                                </label>
+                                {% if field.field.widget.input_type == 'password' %}
+                                    <div class="input-group">
+                                        <input type="password" class="form-control" name="{{ field.name }}"
+                                              id="id_{{ field.name }}" placeholder="{{ field.field.widget.attrs.placeholder }}">
+                                              <div class="input-group-append">
+                                                <button type="button" class="btn btn-outline-eye" onclick="togglePassword('id_{{ field.name }}')">
+                                                  <i class="fa-solid fa-eye " id="eyeIcon" style="color: #6a6161;"></i> 
+                                                </button> 
+                                              </div>
+                                    </div>
+                                {% else %}
+                                
+                                    <input type="{{ field.field.widget.input_type }}" class="form-control" name="{{ field.name }}"
+                                          id="id_{{ field.name }}" placeholder="{{ field.field.widget.attrs.placeholder }}">
+                                {% endif %}
+                            </div>
+                        </div>
+                        {% endfor %}
+                        <button type="submit" class="btn btn-primary">Change Password</button>
+
+                    </div>
             </div>
         </div>
+
+        </form>
     </div>
-    
+</section>
+<script>
+    function togglePassword(fieldId) {
+      var eyeIcon = document.getElementById('eyeIcon');
+  
+      // Check the current color
+      var currentColor = eyeIcon.style.color;
+  
+      // Toggle color
+      // if (currentColor === 'blue') {
+      //   eyeIcon.style.color = '#000000'; // Change back to black
+      // } else {
+      //   eyeIcon.style.color = 'blue'; // Change to purple
+      // }
+      const passwordField = document.getElementById(fieldId);
+      const fieldType = passwordField.type === 'password' ? 'text' : 'password';
+      passwordField.type = fieldType;
+    }
+  </script>
 {% endblock %}
