--- a/remote_Job/template/account/login.html
+++ b/remote_Job/template/account/login.html
@@ -23,22 +23,7 @@
     <div class="row">
       <div class="col-lg-10 mb-5 mx-auto" >
         {% include 'messages.html' %}
-        {% if form.errors %}
-          {% for field in form %}
-            {% for error in field.errors %}
-              <div class="alert alert-danger alert-dismissable">
-                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                <strong>{{ error|escape }}</strong>
-              </div>
-            {% endfor %}
-          {% endfor %}
-          {% for error in form.non_field_errors %}
-            <div class="alert alert-danger alert-dismissable">
-              <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-              <strong>{{ error|escape }}</strong>
-            </div>
-          {% endfor %}
-        {% endif %}
+        
         <form method="POST" action="#" class="p-4 rounded-lg " id="login-form" style="background-color: #ffffff; position: relative;">
           <!-- <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div> -->
           <!-- <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div> -->
@@ -62,7 +47,7 @@
                       {% if field.field.widget.input_type == 'password' %}
                       <div class="input-group-append">
                         <button type="button" class="btn btn-outline-eye" >
-                          <i class="fa-solid fa-eye fa-lg" id="togglePassword" style="color: #4a4646;"></i> 
+                          <i class="fa-solid fa-eye" id="togglePassword" style="color: #6a6161;"></i> 
                           
                         </button> 
                       </div>     
@@ -97,24 +82,6 @@
   </div>
 </section>
 
-<!-- <script>
-  function togglePassword(fieldId) {
-    var eyeIcon = document.getElementById('eyeIcon');
-
-    // Check the current color
-    var currentColor = eyeIcon.style.color;
-
-    // Toggle color
-    if (currentColor === 'blue') {
-      eyeIcon.style.color = '#000000'; // Change back to black
-    } else {
-      eyeIcon.style.color = 'blue'; // Change to purple
-    }
-    const passwordField = document.getElementById(fieldId);
-    const fieldType = passwordField.type === 'password' ? 'text' : 'password';
-    passwordField.type = fieldType;
-  }
-</script> -->
 
 
 {% endblock %}
