--- a/remote_Job/template/jobapp/applicant-details.html
+++ b/remote_Job/template/jobapp/applicant-details.html
@@ -99,7 +99,7 @@
           </div>
           <div class="form-group">
             <label for="email">Email:</label>
-            <input type="email" class="form-control" id="email" value="{{ applicant.email }}" readonly>
+            <input type="text" class="form-control" id="email" value="{{ applicant.email }}" readonly>
           </div>
           <div class="form-group">
             <label for="company_name">Company Name:</label>
