--- a/remote_Job/template/jobapp/result.html
+++ b/remote_Job/template/jobapp/result.html
@@ -2,10 +2,8 @@
 {% load static %}
 {% block content %}
 
-
 <!-- HOME -->
-<section class="section-hero overlay inner-page bg-image" style="background-image: url('{% static 'images/bgrr.jpg' %}');"
-  id="home-section">
+<section class="section-hero overlay inner-page bg-image" style="background-image: url('{% static 'images/bgrr.jpg' %}');" id="home-section">
   <div class="container">
     <div class="row">
       <div class="col-md-7">
@@ -19,56 +17,44 @@
   </div>
 </section>
 
-<section class="site-section services-section bg-light block__62849" id="next-section">
+<section id="ajax_listing_paginattion" class="site-section services-section bg-light block__62849" id="next-section">
   <div class="container">
-
     <div class="row">
+
       {% for job in page_obj %}
-      <div class="col-6 col-md-6 col-lg-4 mb-4 mb-lg-5">
-        <a href="{% url 'jobapp:single-job' job.id %}" class="block__16443 min-h text-center d-block">
-          <span class="custom-icon mx-auto"><span class="icon-magnet d-block"></span></span>
-          <h3>{{ job.title }}</h3>
-          <ul class="job-listing-meta list-unstyled pl-3 mb-0">
-            <li class="menu-fix mb-2">
-              {% if job.job_type == '1' %}
-              <span class="badge badge-primary">
-                Full Time
-              </span>
-              {% elif job.job_type == '2'%}
-              <span class="badge badge-danger">
-                Part Time
-              </span>
-              {% else  %}
-              <span class="badge badge-info">
-                Internship
-              </span>
-              {% endif %}</li>
-            <li class="badge badge-secondary menu-fix mb-2"> {{ job.location }}</li>
-          </ul>
-          <p>{{ job.description | safe | truncatechars:100}}</p>
-        </a>
-      </div>
+        {% if forloop.counter0|divisibleby:2 %}<div class="w-100"></div>{% endif %} <!-- Add a new row after every 2 jobs -->
+        <div class="col-6 col-md-6 col-lg-6 mb-4 mb-lg-5">
+          <a href="{% url 'jobapp:single-job' job.id %}" class="block__16443 min-h text-center d-block">
+            <span class="custom-icon mx-auto"><span class="icon-magnet d-block"></span></span>
+            <h3>{{ job.title }}</h3>
+            <ul class="job-listing-meta list-unstyled pl-3 mb-0">
+              <li class="menu-fix mb-2">
+                {% if job.job_type == '1' %}
+                  <span class="badge badge-primary">Full Time</span>
+                {% elif job.job_type == '2' %}
+                  <span class="badge badge-danger">Part Time</span>
+                {% else %}
+                  <span class="badge badge-info">Internship</span>
+                {% endif %}
+              </li>
+              <li class="badge badge-secondary menu-fix mb-2"> {{ job.location }}</li>
+            </ul>
+            <p>{{ job.description | safe | truncatechars:150}}</p>
+          </a>
+        </div>
       {% endfor %}
-    </div>
-    {% if no_results %}
-    <div class="container">
-      <div class="row justify-content-center">
-          <div class="col-md-6">          
-              <h2 class="mx-auto"> No Result Found..!!! </h2>
+
+      {% if no_results %}
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-md-6">          
+              <h2 align="center"> No Result Found..!!! </h2>
+            </div>
           </div>
-      </div>
-  </div>
-    {% else %}
-        <!-- Display your search results here -->
-        {% for job in page_obj %}
-            <!-- Display job details -->
-        {% endfor %}
-        <!-- Display pagination links -->
-    {% endif %}
-
-    
+        </div>
+      {% endif %}
+    </div>
     {% include 'jobapp/paginator.html' %}
-
   </div>
 </section>
 
